# FHE-project

./: .gitmodules  README.md
KMS/: .gitignore  Cargo.toml
KMS/src/: kms.rs  main.rs  routes.rs  state.rs
KMS/src/handlers/: health.rs  keys.rs  mod.rs
client/: Cargo.toml
client/src/: contracts.rs  fhe.rs  kms.rs  main.rs
contracts/: README.md  foundry.toml
contracts/script/: DeployInfra.s.sol  DeployToken.s.sol  MockTest.s.sol
contracts/src/: EncryptedERC20.sol
contracts/src/mocks/: MockACL.sol  MockFHEVMExecutor.sol
contracts/test/: EncryptedERC20.t.sol
coprocessor/: Cargo.toml
coprocessor/src/: config.rs  main.rs  types.rs
coprocessor/src/events/: listener.rs  mod.rs  parser.rs  signatures.rs  types.rs
