[package]
name = "KMS"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tfhe = { version = "0.8", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs"] }
bincode = "1.3"
base64 = "0.21"
