[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.3", features = ["full"] }
anyhow = "1"
base64 = "0.21"
bincode = "1.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
tfhe = { version = "0.8", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
tokio = { version = "1", features = ["full"] }
