[package]
name = "coprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
hex = "0.4"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
